fix host header syntax for IPv6 address literals: bug 45891 r=gagan a=waterson